# HW_07_WEB

./: config.ini  my_select.py  pyproject.toml  результати.txt
migrations/: env.py
migrations/versions/: 2e9c19df358a_init.py
